[package]
name = "mandlebrotset"
version = "0.1.0"
authors = ["Spockuto"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
colors-transform = "0.2.11"
num-complex = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'HtmlCanvasElement',
  'ImageData',
  'console'
]